syntax = "proto3";
package oneflow;

import "oneflow/conf/dlnet_conf.proto";
import "oneflow/conf/resource.proto";
import "oneflow/conf/strategy.proto";
import "oneflow/conf/job_conf.proto";

message JobDescProto {
  DLNetConf train_dlnet_conf = 1;
  Resource resource = 2;
  Strategy strategy = 3;
  string model_load_machine = 4;
  string model_save_machine = 5;
  uint32 batch_size = 6;
  uint32 piece_size = 7;
  bool is_train = 8;
  FloatingPointType floating_point_type = 9;
}
